fix misaligned h1 tag

--- a/app/store_project/static/css/base.css
+++ b/app/store_project/static/css/base.css
@@ -20,20 +20,16 @@
   --error: #ffcccc;
   --color-draft: #995331;
   --color-private: #b82828;
-  --striped-bg-1: repeating-linear-gradient(
-    -45deg,
-    var(--main-color-dark),
-    var(--main-color-dark) 10px,
-    var(--main-color-dark-gray) 10px,
-    var(--main-color-dark-gray) 20px
-  );
-  --striped-bg-2: repeating-linear-gradient(
-    45deg,
-    var(--main-color-dark),
-    var(--main-color-dark) 10px,
-    var(--main-color-dark-gray) 10px,
-    var(--main-color-dark-gray) 20px
-  );
+  --striped-bg-1: repeating-linear-gradient(-45deg,
+      var(--main-color-dark),
+      var(--main-color-dark) 10px,
+      var(--main-color-dark-gray) 10px,
+      var(--main-color-dark-gray) 20px);
+  --striped-bg-2: repeating-linear-gradient(45deg,
+      var(--main-color-dark),
+      var(--main-color-dark) 10px,
+      var(--main-color-dark-gray) 10px,
+      var(--main-color-dark-gray) 20px);
 
   /* modular scale */
   --ratio: 1.3;
@@ -276,6 +272,7 @@ h1 {
   font-size: var(--s3);
   line-height: normal;
   text-align: center;
+  max-width: unset;
 }
 
 h2 {
@@ -485,13 +482,11 @@ ul.errorlist {
 }
 
 .box.invert.download:hover {
-  background: repeating-linear-gradient(
-    -45deg,
-    var(--color-dark),
-    var(--color-dark) 5px,
-    var(--main-color-dark) 5px,
-    var(--main-color-dark) 10px
-  );
+  background: repeating-linear-gradient(-45deg,
+      var(--color-dark),
+      var(--color-dark) 5px,
+      var(--main-color-dark) 5px,
+      var(--main-color-dark) 10px);
 }
 
 .box.transparent {
@@ -516,17 +511,15 @@ ul.errorlist {
 
 .box.owned {
   color: black;
-  background: linear-gradient(
-    150deg,
-    rgba(193, 0, 0, 0.8),
-    rgba(191, 127, 63, 0.8),
-    rgba(191, 191, 63, 0.8),
-    rgba(127, 191, 63, 0.8),
-    rgba(63, 127, 191, 0.6),
-    rgba(63, 63, 191, 0.6),
-    rgba(127, 63, 191, 0.6),
-    rgba(191, 63, 191, 0.6)
-  );
+  background: linear-gradient(150deg,
+      rgba(193, 0, 0, 0.8),
+      rgba(191, 127, 63, 0.8),
+      rgba(191, 191, 63, 0.8),
+      rgba(127, 191, 63, 0.8),
+      rgba(63, 127, 191, 0.6),
+      rgba(63, 63, 191, 0.6),
+      rgba(127, 63, 191, 0.6),
+      rgba(191, 63, 191, 0.6));
   background-size: 400% 400%;
   animation: gradient 15s ease infinite;
 }
